# c64-pico-ram-interface

./: LICENSE  README.md
c64-rom/: .gitignore  Makefile  bin2c.py  loader_rom.asm  loader_rom.c  loader_rom.h  raspi.c  raspi.h  raspi.nuf  raspi.xcf
docs/: command-sequence.puml  read-sequence.puml
firmware/: .gitignore  CMakeLists.txt  address_decoder.pio  c64_pico_ram_interface.c  command.pio  exposed_ram.c  exposed_ram.h  lwipopts.h  read.pio  wifi.c  wifi.h
pcb/: .gitignore  fp-lib-table  picocart.dcm  picocart.kicad_pcb  picocart.kicad_prl  picocart.kicad_pro  picocart.kicad_sch  picocart.lib  sym-lib-table
pcb/gerber/: picocart-B_Cu.gbl  picocart-B_Mask.gbs  picocart-B_Paste.gbp  picocart-B_Silkscreen.gbo  picocart-Edge_Cuts.gm1  picocart-F_Cu.gtl  picocart-F_Mask.gts  picocart-F_Paste.gtp  picocart-F_Silkscreen.gto  picocart-NPTH-drl_map.gbr  picocart-NPTH.drl  picocart-PTH-drl_map.gbr  picocart-PTH.drl
pcb/picocart.pretty/: C64ExpansionEdge.kicad_mod  C64ExpansionEdgeShort.kicad_mod  OS102011MS2Q.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  RPi_Pico_TH.kicad_mod  SOP65P640X110-20N.kicad_mod  SOP65P640X120-20N.kicad_mod  SOT95P275X110-5N.kicad_mod  logo.kicad_mod
